[package]
name = "rdis"
version = "0.1.0"
authors = ["carlo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
# debug = true

[dependencies]
tokio = { version = "0.3", features = ["full"] }
bytes = {version = "0.6.0"}
nom = {version ="6.0.0"}
async-recursion = {version="0.3"}
log = {version = "0.4"}
simple_logger = {version = "1.11"}
