[package]
name = "rdis"
version = "0.1.0"
authors = ["carlo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
debug = true

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = {version = "1"}
nom = {version ="7"}
async-recursion = {version="0.3"}
log = {version = "0.4"}
simple_logger = {version = "1"}

#tracing stuff
tracing = "0.1"
tracing-futures = {version = "0.2"}
tracing-opentelemetry = "0.16.0"
tracing-subscriber = "0.3"
opentelemetry = {version = "*", features = ["rt-tokio"]}
opentelemetry-jaeger = { version = "*", features = ["rt-tokio"]}